# Disaster-management

./: .replit  README.md  app.py  main.py  pyproject.toml  requirements.txt
assets/: custom.css
attached_assets/: Pasted-import-logging-from-flask-import-Flask-render-template-request-jsonify-from-datetime-import-datet-1740671154653.txt
data/: generate_training_data.py  sample_training.csv  training_data.csv
models/: disaster_model.joblib
pages/: 01_predictions.py  02_resources.py  03_alerts.py  04_maps.py
static/css/: style.css
static/js/: main.js
templates/: alerts.html  base.html  index.html  maps.html  predictions.html  resources.html
templates/errors/: 404.html  500.html
utils/: data_generator.py  ml_predictor.py  mock_ml.py  resource_optimizer.py  sms_handler.py
