[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "streamlit-folium>=0.24.0",
    "streamlit>=1.42.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "folium>=0.19.4",
    "scikit-learn>=1.6.1",
    "joblib>=1.4.2",
    "twilio>=9.4.6",
    "flask>=3.1.0",
]
